external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_named_ctor.exp
error[E03013]: positional call mismatch
  ┌─ tests/development/enums/matching/invalid_named_ctor.move:8:18
  │
4 │         E { x : u64 }
  │         ------------- Variant is defined here.
  ·
8 │         let _x = Entry::E;
  │                  ^^^^^^^^ Invalid variant instantiation. Non-empty variant instantiations require arguments
  │
  = Pass arguments to named variant fields using '{ .. }'

error[E04016]: too few arguments
  ┌─ tests/development/enums/matching/invalid_named_ctor.move:8:18
  │
8 │         let _x = Entry::E;
  │                  ^^^^^^^^ Missing argument for field 'x' in '0x42::m::Entry::E'

error[E03013]: positional call mismatch
  ┌─ tests/development/enums/matching/invalid_named_ctor.move:9:18
  │
4 │         E { x : u64 }
  │         ------------- Variant is defined here.
  ·
9 │         let _x = Entry::E();
  │                  ^^^^^^^^^^ Invalid variant instantiation. Named variant fields require named instantiations.
  │
  = Pass arguments to named variant fields using '{ .. }'

error[E04016]: too few arguments
  ┌─ tests/development/enums/matching/invalid_named_ctor.move:9:18
  │
9 │         let _x = Entry::E();
  │                  ^^^^^^^^^^ Missing argument for field 'x' in '0x42::m::Entry::E'

